# FastAPI_auth

./: .gitignore  README.md  pyproject.toml
src/app/: env  main.py
src/app/api/auth/: auth_router.py  base_auth.py  hash_utils.py
src/app/api/models/: models.py
src/app/api/routers/: user_router.py
src/app/api/schemas/: methods.py  schemas.py
src/app/core/: config.py
src/app/db/: __init__.py  database.py
