[tool.poetry]
name = "fastapi-auth "
version = "0.1.0"
description = ""
authors = ["c1kvoy <seva33039@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
sqlalchemy = "^2.0.31"
uvicorn = "^0.30.4"
pydantic = "^2.8.2"
greenlet = "^3.0.3"
asyncpg = "^0.29.0"
pydantic-settings = "^2.4.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
bcrypt = "^4.2.0"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
